# miniature-sniffle-mapper

./: CMakeLists.txt  README.md  bowtieCommands.h  build_reference.cpp  calcMethylTag.h  commandLineParse.h  extract_methylation.cpp  methylation_simulator.cpp  miniature-sniffle-mapper.cpp  prepareReads.h  processAlignments.h  run_bismark.sh  run_bismark_chr4.sh  run_cleanup.sh  run_methylation_extract.sh  run_test.sh  test_harness.sh
bismark_example/: test_data_BSSeq_SE_nondirectional_100k_alloverlapchr_bismark_bismark_bt2.bam  test_data_BSSeq_SE_nondirectional_100k_bismark_bismark_bt2.bam
mapper_2/: EXAMPLE.md  benchmark.md  benchmark2.md
